--- a/config/database.yml
+++ b/config/database.yml
@@ -38,7 +38,7 @@ development:
 #this for test environment setting
 test:
   <<: *default
-  database: app1_setting
+  database: app1_testing
 
 #this for production environment setting
 production:
