--- a/config/database.yml
+++ b/config/database.yml
@@ -27,8 +27,8 @@ default: &default
   adapter: postgresql
   encoding: unicode
   pool: 5
-  username: postgres
-  password: postgres
+  username: your_username
+  password: your_password
 
 #this for development setting
 development:
