--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 .ruby-gemset
 .ruby-version
-public/
-log/
-config/database.yml
-config/environments/development.rb
-mailers/confirmation_mailer.rb
+/public/.
+/log/.
+/config/database.yml
+/config/environments/development.rb
+/mailers/confirmation_mailer.rb
 
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 #
